[package]
name = "hueclipse"
version = "1.0.2"
authors = ["Advik Chaudhary <advik.ch@gmail.com"]
edition = "2021"
license = "MIT"
description = "Library behind Hueclipse -- a colour-removing app"
homepage = "https://github.com/AdvikCh/Softwares.Hueclipse.git"
repository = "https://github.com/AdvikCh/Softwares.Hueclipse.git"
keywords = ["image", "rust", "erase", "color", "transparent"]
categories = ["image-processing", "remove-background"]

[lib]
name = "hueclipse"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
image = "0.25"